--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div class="wrapper">
+      <img class="arrow" src="./imeges/arrow-down.png" alt="" />
       <h1 class="titel titel-1">Lorem, ipsum.</h1>
       <p class="text-1">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur a
@@ -29,6 +30,11 @@
         vero laborum sit ipsam voluptas officiis commodi cupiditate. Sit magni
         commodi beatae magnam itaque ipsa nisi deserunt!
       </p>
+      <div class="box">
+        <p class="text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        </p>
+      </div>
       <h2 class="titel titel-2">Lorem ipsum dolor sit.</h2>
       <p class="text-2">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, sit
